Fix Result Listing Title Overflow

--- a/ce-mob/css/main.css
+++ b/ce-mob/css/main.css
@@ -812,7 +812,10 @@ a.scroll-event:hover{
 }
 
 .search-result-title, .search-result-venue{
-    max-width:210px;overflow:hidden;
+    max-width:180px;overflow:hidden;
+    text-overflow:ellipsis;
+    overflow:hidden;
+    white-space: nowrap;
 }
 
 .search-result-distance{
